TESTS = test_l4_init test_l4_sp
check_PROGRAMS = test_l4_init test_l4_sp

test_l4_init_SOURCES = tests/test_l4_init.c
test_l4_sp_SOURCES = tests/test_l4_sp.c

test_l4_init_CFLAGS = $(CFLAGS) $(CHECK_CFLAGS) -I./src -L./src/.libs -pedantic -std=c99
test_l4_sp_CFLAGS = $(CFLAGS) $(CHECK_CFLAGS) -I./src -L./src/.libs -pedantic -std=c99

test_l4_init_LDADD = $(LDFLAGS) $(CHECK_LIBS) -lhtmc -lxml2
test_l4_sp_LDADD = $(LDFLAGS) $(CHECK_LIBS) -lhtmc -lxml2

ACLOCAL_AMFLAGS= -I m4
SUBDIRS = src
dist_doc_DATA = README
