lib_LTLIBRARIES = libhtmc.la
libhtmc_la_SOURCES = htm.c \
                    layer4_mgmt.c \
                    layer4_algs.c \
                    layer6_mgmt.c \
                    layer6_algs.c \
                    minicolumn.c \
                    parse_conf.c
AM_CFLAGS = -std=c99 -pedantic -Werror -ggdb -mfpmath=sse -mmmx -msse -msse2
