lib_LTLIBRARIES = libhtmc.la
libhtmc_la_SOURCES = htm.c \
                    utils.c \
                    layer4_mgmt.c \
                    layer4_algs.c \
                    layer6_mgmt.c \
                    layer6_algs.c \
                    minicolumn.c \
                    parse_conf.c \
                    repr.c
AM_CFLAGS = -std=c99 -pedantic -Werror -ggdb -mfpmath=sse -mmmx -msse -msse2
